<resources>
    <string name="app_name">Yalidine Freelance</string>
    <string name="title_activity_nave">NaveActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Yalidine Freelance</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_pickup">Pickup</string>
    <string name="menu_shipment_list">colis à livrer</string>
    <string name="btn_login">Login</string>
    <string name="yalidine_logo">Yalidine Logo</string>
    <string name="bienvenue_part_1">Bienvenue à Yalidine Freelance</string>
    <string name="bienvenue_part_2">Plateforme</string>
    <string name="label_email">Email</string>
    <string name="label_mdp">Mot de passe</string>
    <string name="button_login">Connexion</string>
    <string name="btn_scanne">button Scanne</string>
    <string name="btn_validate_pickup">Valider</string>
    <string name="tracking">00000012</string>
    <string name="commune">Alger Centre bara</string>
    <string name="index">1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_livrer_txt">Livré</string>
    <string name="btn_faile_txt">Echec</string>
    <string name="btn_call_txt">Call</string>
    <string name="tarif_txt">100.00</string>
    <string name="destinataire_icon_dectiption">destinataire_icon</string>
    <string name="nom_destinataire_txt">Nom Destinataire</string>
    <string name="prenome_destinataire_txt">Prenome destinataire</string>
    <string name="num_tel_dest_txt">00 11 00 11 00</string>
    <string name="adresse_destinataire_txt">Adresse Destinataire</string>
    <string name="expiditeur_icon_dectiption">destinataire_icon</string>
    <string name="nom_expiditeur_txt">Nom Expediteur</string>
    <string name="prenome_expiditeur_txt">Prenome Expediteur</string>
    <string name="num_tel_exp_txt">00 22 00 22 00</string>
    <string name="adresse_expiditeur_txt">Adresse Expediteur</string>
    <string name="titre_alertes">1- Alertes</string>
    <string name="telephone_injoignable_txt">Telephone Injoignable</string>
    <string name="client_ne_repond_pas_txt">Client Ne Repond Pas</string>
    <string name="faux_numero_txt">Faux Numero</string>
    <string name="commune_erroner_txt">Commune Erroner</string>
    <string name="client_no_show_txt">Client No Show</string>
    <string name="client_absent_reporter_txt">Client Absent Reporter</string>
    <string name="btn_valider_txt">Valider</string>
    <string name="btn_fermer_txt">Fermer</string>
    <string name="client_absent_reporter_txt_11">1111111111111</string>
    <string name="clientAbsentEchouer">client Absent Echouer</string>
    <string name="annulerParClient">Annuler Par Client</string>
    <string name="commandeEnDouble">commande En Double</string>
    <string name="produitErroner">client Na Pas Commander</string>
    <string name="produitCasserOuDefectueux">Produit Erroner</string>
    <string name="ClientIncapableDePayer">Client Incapable De Paye</string>
    <string name="WilayaErronee">Wilaya erronée</string>
    <string name="titre_echec">Echec livraison</string>
    <string name="colis_en_attente_de_recevoir_txt">Colis en attente de recevoir</string>
    <string name="colis_en_attente_de_recevoir_val">0</string>
    <string name="recevoir_colis_txt">recevoir colis</string>
    <string name="colis_en_ma_possession">0</string>
    <string name="colis_en_ma_possession_txt">Colis en ma possession</string>
    <string name="colis_echangé">0</string>
    <string name="colis_echange_txt">Colis echangé</string>
    <string name="colis_echec">0</string>
    <string name="colis_echec_txt">Colis echec</string>
    <string name="colis_livres">0</string>
    <string name="colis_livres_txt">Colis livrés</string>
    <string name="montant_a_payer">0</string>
    <string name="montant_a_payer_txt">Montant à payer</string>
    <string name="gain">0</string>
    <string name="gain_txt">Gain</string>

</resources>