<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_baseline_dashboard_24"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_pickup"
            android:icon="@drawable/ic_baseline_local_shipping_24"
            android:title="@string/menu_pickup" />
        <item
            android:id="@+id/shipment_list"
            android:icon="@drawable/ic_baseline_check_box_24"
            android:title="@string/menu_shipment_list" />
        <item
            android:title="@string/recevoir_colis_txt"
            android:icon="@drawable/ic_baseline_call_received_24"
            android:id="@+id/receiveShipmentFragment"
            />
    </group>
</menu>