<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detailShipment.EchecShipmentFragment">

    <TextView
        android:id="@+id/id_txt_echec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/titre_echec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="44dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_txt_echec" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider6">

        <RadioGroup
            android:id="@+id/radioEcheque"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="40dp">

            <RadioButton
                android:id="@+id/clientAbsentEchouer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clientAbsentEchouer" />

            <RadioButton
                android:id="@+id/annulerParClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/annulerParClient" />

            <RadioButton
                android:id="@+id/commandeEnDouble"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/commandeEnDouble" />

            <RadioButton
                android:id="@+id/produitErroner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/produitErroner" />

            <RadioButton
                android:id="@+id/produitCasserOuDefectueux"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/produitCasserOuDefectueux" />

            <RadioButton
                android:id="@+id/ClientIncapableDePayer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ClientIncapableDePayer" />

            <RadioButton
                android:id="@+id/WilayaErronee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/WilayaErronee" />

        </RadioGroup>


    </ScrollView>

    <Button
        android:id="@+id/id_btn_validate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btn_valider_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <Button
        android:id="@+id/idi_btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        style="?android:attr/buttonBarButtonStyle"
        android:text="@string/btn_fermer_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

</androidx.constraintlayout.widget.ConstraintLayout>
